--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,11 @@
             <version>${slf4j.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230618</version>
+        </dependency>
 
     </dependencies>
 
